IstioRules/microservice-a-virtualservice-chrome.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /
      headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: microservice-a
        subset: v2
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservice-a
        subset: v1
