IstioRules/microservice-c-virtualservice-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-c
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
 http:
  - match:
    - uri:
        prefix: /microservice-c
    rewrite:
      uri: /
    route:
    - destination:
        host: microservice-c
        subset: v1
